syntax = "proto3";

package pb;

// 联系我们
message Contact {
    // 联系内容
    string content = 1;
    // 类型代码
    int64 itype = 2;
}

// 联系我们返回结构体
message ContactResp {
    // 联系我们
    repeated Contact list = 1;
}

// 底部文案 更多
message FootIwordResp {
    // logo图片
    string logo = 1;
    // 文案
    repeated FootIword iword = 2;
}

// 文案
message FootIword {
    // 名称
    string title = 1;
    // 内容
    string content = 2;
    int32 id = 3;
}